Upgrade to Spring Boot 2.3.1